2008-09-25  Jonathan Pryor  <jpryor@novell.com>

	* doc/en/**: Flush.

2008-09-23  Jonathan Pryor  <jpryor@novell.com>

	* Makefile: `check` shouldn't test NotWorking tests; add `check-all`
	  target which tests all tests, including NotWorking tests.
	* Mono.Rocks.dll.sources, Mono.Rocks.csproj: Add
	  Mono.Rocks/JaggedArray.cs and Mono.Rocks/RectangularArray.cs to the
	  build.
	* Mono.Rocks.Tests.dll.sources, Tests/Mono.Rocks.Tests.csproj: Add
	  Tests/Mono.Rocks.Tests/JaggedArrayTest.cs and
	  Tests/Mono.Rocks.Tests/RectangularArrayTest.cs to the build.
	* doc/en/**: Add new types.

2008-09-23  Jonathan Pryor  <jpryor@novell.com>

	* Makefile: Add `shell` target, which runs `csharp -r:Mono.Rocks.dll` 
	  for simple interactive testing.
	* doc/en/**: Flush.

2008-09-22  Jonathan Pryor  <jpryor@novell.com>

	* . (svn:ignore): Ignore MonoDevelop-generated directories.

2008-09-22  Jonathan Pryor  <jpryor@novell.com>

	* doc/en/**: Flush.
	* . (svn:ignore): Update ignored files list.

2008-09-22  Jonathan Pryor  <jpryor@novell.com>

	* lib/mono-rocks (svn:ignore): Ignore generated directories.

2008-09-22  Jonathan Pryor  <jpryor@novell.com>

	* Mono.Rocks.dll.sources, Mono.Rocks.csproj: Add Mono.Rocks/Either.cs 
	  to the build.
	* Mono.Rocks.csproj, Tests/Mono.Rocks.Tests.csproj: Update output 
	  directory; correct filename errors.
	* doc/en/Mono.Rocks/Either.xml: Added.

2008-09-22  Jonathan Pryor  <jpryor@novell.com>

	* Makefile: Place Mono.Rocks.dll & Mono.Rocks.Tests.dll into
	  lib/mono-rocks; add an `install` target -- usage is:
	    make install prefix=/path/to/root/prefix
	  If necessary, libdir can also be set if $prefix/lib isn't the
	  correct $libdir:
	    make install prefix=/path/to/root/prefix libdir=/alt/libdir
	  Rename `run-test` to `check`.
	* doc/Makefile.include: place mono-rocks-docs.{tree,zip} into
	  lib/monodoc/sources; add doc-install target; fix 
	  mono-rocksdocs.{tree,zip} generation.
	* doc/mono-rocks-docs.source: Moved to